# src/main/openapi/jupiter-openapi.yml
@@ -311,6 +311,91 @@ paths:
                   format: binary
       tags:
         - student-controller
+  '/api/courses/{courseId}/cancelLesson/{day}':
+    parameters:
+      - schema:
+          type: integer
+        name: courseId
+        in: path
+        required: true
+      - schema:
+          type: string
+          format: date
+        name: day
+        in: path
+        required: true
+    put:
+      summary: ''
+      operationId: cancel-lesson
+      responses:
+        '200':
+          description: OK
+      tags:
+        - course-controller
+  /api/timetable:
+    get:
+      summary: Your GET endpoint
+      tags:
+        - time-table-controller
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TimeTableDto'
+      operationId: get-api-timetable
+      parameters:
+        - schema:
+            type: integer
+          in: query
+          name: studentId
+        - schema:
+            type: integer
+          in: query
+          name: teacherId
+        - schema:
+            type: string
+            format: date
+          in: query
+          name: from
+        - schema:
+            type: string
+            format: date
+          in: query
+          name: until
+  /api/timetable/search:
+    get:
+      summary: Your GET endpoint
+      tags:
+        - time-table-controller
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TimeTableItemDto'
+      operationId: search-time-table
+      parameters:
+        - schema:
+            type: integer
+          in: query
+          name: studentId
+        - schema:
+            type: integer
+          in: query
+          name: teacherId
+        - schema:
+            type: string
+            format: date
+          in: query
+          name: from
+        - schema:
+            type: string
+          in: query
+          name: course
+      description: ''
 components:
   schemas:
     TeacherDto:
@@ -377,3 +462,23 @@ components:
         date:
           type: string
           format: date-time
+    TimeTableDto:
+      title: TimeTableDto
+      type: array
+      items:
+        $ref: '#/components/schemas/TimeTableItemDto'
+    TimeTableItemDto:
+      title: TimeTableItemDto
+      type: object
+      properties:
+        courseName:
+          type: string
+        day:
+          type: string
+          format: date
+        startLesson:
+          type: string
+          format: time
+        endLesson:
+          type: string
+          format: time
